--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bouncing ball game</title>
 </head>
 <body>
-    
+    <h1>My Jumper Game</h1>
+    <p>A fun flappy-bird like game.</p>
 </body>
 </html>
