--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bouncing ball game</title>
 </head>
+
 <body>
-    <h1>My Jumper Game</h1>
-    <p>A fun flappy-bird like game.</p>
+    <div id="header">
+        <h1>My Jumper Game</h1>
+        <p>A fun flappy-bird like game.</p>
+    </div>
+
+    <div id="can">
+        <canvas id="canvas"></canvas>
+        <br><br>
+        <button id="jump">Jump</button>
+    </div>
 </body>
+
 </html>
