--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 </html>
 
 
-
+<!-- <canvas id="canvas" width="600" height="400">
+    Your browser does not support the HTML5 canvas tag.
+</canvas> -->
 
 <!--
 <img src="https://github-readme-stats.vercel.app/api?username=zluvsand&show_icons=true&theme=dark"/>
