HTML button Div added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <canvas id="canvas"></canvas>
         <br><br>
         <button id="jump">Jump</button>
+    </div> <br> <br>
+    <div align="center">
+        <button id="up">↑</button><br />
+        <button id="left">←</button>
+        <button id="down">↓</button>
+        <button id="right">→</button>
     </div>
 
 
