jump button is removed

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <h1>My Jumper Game</h1>
         <p>A fun flappy-bird like game.</p>
     </div>
-    <div class="can">
+    <div class="can" align="center">
         <canvas id="canvas"></canvas>
-        <br><br>
-        <button id="jump">Jump</button>
+        <br>
     </div> <br> <br>
     <div align="center">
         <button id="up">↑</button><br />
